fix text overflow

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -155,6 +155,9 @@ a {
 .span-hide span.MuiFormControlLabel-label{
   width: 80%;
 }
+.rtl .span-hide span.MuiFormControlLabel-label{
+  width: 70%;
+}
 .rtl .header-right {
   text-align: right;
 }
